Update OpenApi spec
